--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "@types/jest": "24.0.11",
+    "@types/node": "11.11.0",
+    "@types/react": "16.8.7",
+    "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "env-cmd": "^8.0.2",
+    "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-react-app": "^3.0.8",
+    "eslint-plugin-flowtype": "^3.4.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
     "husky": "^1.3.1",
@@ -17,15 +32,11 @@
     "jest-dom": "^3.1.2",
     "lint-staged": "^8.1.5",
     "morgan": "^1.9.1",
+    "petka17-react-scripts": "4.3.6",
     "prettier": "^1.16.4",
     "react-testing-library": "^6.0.0",
     "ts-jest": "^24.0.0",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.11.0",
-    "@types/react": "16.8.7",
-    "@types/react-dom": "16.8.2",
-    "typescript": "3.3.3333",
-    "petka17-react-scripts": "4.3.6"
+    "typescript": "3.3.3333"
   },
   "husky": {
     "hooks": {
@@ -35,30 +46,58 @@
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json}": [
       "prettier --write",
+      "eslint \"./src/**/*.{ts,tsx}\" --fix",
       "git add"
     ]
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "yarn jest --watch",
-    "test:coverage": "yarn jest --coverage",
+    "test": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint \"./src/**/*.{ts,tsx}\"",
+    "format": "prettier --write ./**/*.{ts,tsx,js,json,yml}",
     "server": "env-cmd .env node server.js"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
-    "extends": [
-      "react-app",
-      "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint",
-      "plugin:prettier/recommended"
-    ],
     "parserOptions": {
       "ecmaVersion": 2018,
       "sourceType": "module",
       "ecmaFeatures": {
         "jsx": true
       }
+    },
+    "env": {
+      "jest/globals": true
+    },
+    "extends": [
+      "react-app",
+      "plugin:jest/recommended",
+      "plugin:@typescript-eslint/recommended",
+      "prettier/@typescript-eslint",
+      "plugin:prettier/recommended"
+    ],
+    "plugins": [
+      "jest"
+    ],
+    "rules": {
+      "no-useless-constructor": 0,
+      "@typescript-eslint/camelcase": 0,
+      "@typescript-eslint/no-explicit-any": 0,
+      "@typescript-eslint/explicit-function-return-type": 0,
+      "@typescript-eslint/no-parameter-properties": {
+        "allows": [
+          "private"
+        ]
+      },
+      "@typescript-eslint/explicit-member-accessibility": 0,
+      "@typescript-eslint/no-use-before-define": 0
+    },
+    "globals": {
+      "test": 1,
+      "fail": 1,
+      "expected": 1
     }
   },
   "browserslist": [
