--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "try-cra",
+  "name": "try-cra2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "jsonous": "^3.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "@types/jest": "24.0.11",
-    "@types/node": "11.11.0",
-    "@types/react": "16.8.7",
-    "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
     "env-cmd": "^8.0.2",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-config-react-app": "^3.0.8",
-    "eslint-plugin-flowtype": "^3.4.2",
-    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jest": "^22.3.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "express": "^4.16.4",
@@ -32,11 +26,15 @@
     "jest-dom": "^3.1.2",
     "lint-staged": "^8.1.5",
     "morgan": "^1.9.1",
-    "petka17-react-scripts": "4.3.6",
     "prettier": "^1.16.4",
     "react-testing-library": "^6.0.0",
     "ts-jest": "^24.0.0",
-    "typescript": "3.3.3333"
+    "@types/jest": "24.0.11",
+    "@types/node": "11.11.0",
+    "@types/react": "16.8.7",
+    "@types/react-dom": "16.8.2",
+    "typescript": "3.3.3333",
+    "petka17-react-scripts": "5.0.3"
   },
   "husky": {
     "hooks": {
@@ -46,7 +44,6 @@
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json}": [
       "prettier --write",
-      "eslint \"./src/**/*.{ts,tsx}\" --fix",
       "git add"
     ]
   },
@@ -58,47 +55,6 @@
     "lint": "eslint \"./src/**/*.{ts,tsx}\"",
     "format": "prettier --write ./**/*.{ts,tsx,js,json,yml}",
     "server": "env-cmd .env node server.js"
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "env": {
-      "jest/globals": true
-    },
-    "extends": [
-      "react-app",
-      "plugin:jest/recommended",
-      "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint",
-      "plugin:prettier/recommended"
-    ],
-    "plugins": [
-      "jest"
-    ],
-    "rules": {
-      "no-useless-constructor": 0,
-      "@typescript-eslint/camelcase": 0,
-      "@typescript-eslint/no-explicit-any": 0,
-      "@typescript-eslint/explicit-function-return-type": 0,
-      "@typescript-eslint/no-parameter-properties": {
-        "allows": [
-          "private"
-        ]
-      },
-      "@typescript-eslint/explicit-member-accessibility": 0,
-      "@typescript-eslint/no-use-before-define": 0
-    },
-    "globals": {
-      "test": 1,
-      "fail": 1,
-      "expected": 1
-    }
   },
   "browserslist": [
     ">0.2%",
