--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "@types/jest": "24.0.11",
+    "@types/node": "11.11.0",
+    "@types/react": "16.8.7",
+    "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
@@ -26,15 +30,12 @@
     "jest-dom": "^3.1.2",
     "lint-staged": "^8.1.5",
     "morgan": "^1.9.1",
+    "parcel-bundler": "^1.12.1",
+    "petka17-react-scripts": "5.0.3",
     "prettier": "^1.16.4",
     "react-testing-library": "^6.0.0",
     "ts-jest": "^24.0.0",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.11.0",
-    "@types/react": "16.8.7",
-    "@types/react-dom": "16.8.2",
-    "typescript": "3.3.3333",
-    "petka17-react-scripts": "5.0.3"
+    "typescript": "3.3.3333"
   },
   "husky": {
     "hooks": {
